--- a/app/views/autos/index.html.erb
+++ b/app/views/autos/index.html.erb
@@ -1,5 +1,5 @@
 <h1> <%= link_to 'CREAR NUEVO AUTO', nuevo_auto_path %> </h1>
-<table>
+<table class="table">
   <thead>
   <tr>
     <th>Color</th>
