--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Proyectoayudantia</title>
-    <%= csrf_meta_tags %>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>AdminLTE::Dashboard</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <%= javascript_include_tag "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js", "https://oss.maxcdn.com/respond/1.4.2/respond.min.js" %>
+  <![endif]-->
 
-  <body>
-    <%= yield %>
-  </body>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body class="skin-blue">
+
+  <%= render "layouts/application_header" %>
+
+  <div class="wrapper row-offcanvas row-offcanvas-left">
+    <aside class="left-side sidebar-offcanvas">
+      <%= render "layouts/application_sidebar" %>
+    </aside>
+    <aside class="right-side">
+      <%= yield(:content_header) %>
+
+      <% flash.each do |name, msg| %>
+        <div class="pad margin no-print">
+          <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", :role => "alert" do %>
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">x</button>
+            <%= msg %>
+          <% end %>
+        </div>
+      <% end %>
+
+      <%= yield %>
+    </aside>
+  </div>
+
+  <div class="spinner no-print hidden">
+    <img src="/img/ajax-loader.gif" alt="">
+  </div>
+
+</body>
 </html>
